resolved sonar and fixed the back-reference for each comment.